add LS, TRBDF2 to intro, fix equation number

--- a/lefloch_sabr_fdm.bib
+++ b/lefloch_sabr_fdm.bib
@@ -1,3 +1,32 @@
+@article{flavell2013conservative,
+  title={A Conservative Finite Difference Scheme for Poisson-Nernst-Planck Equations},
+  author={Flavell, Allen and Machen, Michael and Eisenberg, Bob and Liu, Chun and Li, Xiaofan},
+  journal={arXiv preprint arXiv:1303.3769},
+  year={2013}
+}
+
+@article{edwards2011nonlinear,
+  title={Nonlinear variants of the TR/BDF2 method for thermal radiative diffusion},
+  author={Edwards, Jarrod D and Morel, Jim E and Knoll, Dana A},
+  journal={Journal of Computational Physics},
+  volume={230},
+  number={4},
+  pages={1198--1214},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{bathe2005composite,
+  title={On a composite implicit time integration procedure for nonlinear dynamics},
+  author={Bathe, Klaus-J{\"u}rgen and Baig, Mirza M Irfan},
+  journal={Computers \& Structures},
+  volume={83},
+  number={31},
+  pages={2513--2524},
+  year={2005},
+  publisher={Elsevier}
+}
+
 @article{duffy2004critique,
   title={A Critique of the Crank Nicolson Scheme Strengths and Weaknesses for Financial Instrument Pricing},
   author={Danie Duffy},
