--- a/lefloch_sabr_fdm.tex
+++ b/lefloch_sabr_fdm.tex
@@ -55,7 +55,7 @@ z(F) &= \frac{1}{\alpha (1-\beta)}(F^{1-\beta}-f^{1-\beta}) &\text{, }
 C(F) &= F^{\beta} 
 \end{alignat}
 
-It is suggested that the lower boundary $F_{min}$ for the standard SABR model is placed at or near zero. However, the finite difference grid described in Appendix C of their paper starts at  $F_0 = F_{min} - \frac{h}{2}$, where, $h$ is the asset forward discretisation step size, potentially leading to the evaluation of functions not well-defined for negative values of $F_0$. Fortunately, only the product $M_0 Q_0$ is used in the discretization of equation (\ref{eqn_pde}) and it is entirely defined by $M_1 Q_1$  because of the mirror-like boundary condition (imposed at the fictitious point $F_0$): 
+It is suggested that the lower boundary $F_{min}$ for the standard SABR model is placed at or near zero. However, the finite difference grid described in Appendix C of their paper starts at  $F_0 = F_{min} - \frac{h}{2}$, where, $h$ is the asset forward discretisation step size, potentially leading to the evaluation of functions not well-defined for negative values of $F_0$. Fortunately, only the product $M_0 Q_0$ is used in the discretisation of equation (\ref{eqn_pde}) and it is entirely defined by $M_1 Q_1$  because of the mirror-like boundary condition (imposed at the fictitious point $F_0$): 
 \begin{align}\label{boundary_condition}
 M_0 Q_0 + M_1 Q_1 &= 0
 \end{align}
@@ -98,7 +98,7 @@ The boundary condition described by equation (\ref{boundary_condition}) is appli
 
 \subsection{Rannacher}
 A common fix for Crank-Nicolson oscillations related to non smooth initial data is Rannacher time-stepping \citep{rannacher1984finite, GiCa2006}. It consists of introducing two half time-steps of implicit Euler time-stepping before applying Crank-Nicolson, because implicit Euler has much stronger damping properties. This comes at a cost in accuracy as implicit Euler is an order-1 scheme in time, especially when only a few time-steps are needed. 
-The SABR density discretization will still be moment preserving if we discretize the Euler half steps as:
+The SABR density discretisation will still be moment preserving if we discretise the Euler half steps as:
 \begin{align}\label{eqn_euler_1}
 Q_j^{n+\frac{1}{2}}-Q_j^n &= \frac{\delta}{2h^2} \left(M_{j+1}^{n+\frac{1}{2}}Q_{j+1}^{n+\frac{1}{2}}-2M_j^{n+\frac{1}{2}}Q_j^{n+\frac{1}{2}}+M_{j-1}^{n+\frac{1}{2}}Q_{j-1}^{n+\frac{1}{2}} \right) \\
 \label{eqn_euler_2}
@@ -118,7 +118,7 @@ where $\hat{Q}^{\delta}$ is $Q$ computed by implicit Euler with a time step of $
 
 
 \subsection{Lawson-Morris-Gourlay}
-A local Richardson extrapolation in time of second and third order is proposed in \citep{lawson1978extrapolation} and \citep{gourlay1980extrapolation}. In practice, it is a faster alternative to the standard Richardson extrapolation because the tridiagonal matrix stemming out of the finite difference discretization can be reused, while keeping $L$-stability and thus strong damping properties.
+A local Richardson extrapolation in time of second and third order is proposed in \citep{lawson1978extrapolation} and \citep{gourlay1980extrapolation}. In practice, it is a faster alternative to the standard Richardson extrapolation because the tridiagonal matrix stemming out of the finite difference discretisation can be reused, while keeping $L$-stability and thus strong damping properties.
 
 For the second order scheme, at each time-step, equation (\ref{eqn_richardson}) is applied.
 For the third order scheme, at each time-step we apply:
@@ -331,15 +331,18 @@ Collecting terms, we see that
 $$(2-\alpha)\left[F_{min}Q_L^{n+1} + h\sum_{j=1}^J F_jQ_j^{n+1} +F_{max}Q_R^{n+1}\right]=\frac{1}{\alpha}f - \frac{(1-\alpha)^2}{\alpha}f$$
 and so the forward is preserved by BDF2 at $t_{n+1}$.
 
-Checking the moments is very useful way to check the implementation in code.
 
-\section{Sample Numbers}
+\section{Reference Implementation Values}
+Checking the moments at every step is very useful way to validate a scheme's implementation in code. To support further validation we recorded specific values from our implementations as reference. The TR-BDF2 is using a value of $\alpha=2-\sqrt{2}$ whilst the RAN scheme is using Rannacher time-stepping for the first two full time-steps.
+
+
 \begin{table}[h]
 \begin{center}
 \begin{tabular}{|c|r|r|r|r|}
 \hline
 Scheme & $h$ & $Q(f)$ & $Q_L$ & $Q_R$\\ \hline
 CN & 0.010050251256 & -76.222597308083 & 0.036145997780 & 0.000811969902\\
+RAN & 0.010050251256 & 1.390318228263 & 0.037030534101 & 0.001026159943\\
 RE & 0.010050251256 & 1.342391047522 & 0.036966009503 & 0.000850746756\\
 LMG2 & 0.010050251256 & 1.390737156096 & 0.037351038244 & 0.000808345304\\
 LMG3 & 0.010050251256 & 1.385108845032 & 0.036878097804 & 0.000775853690\\
@@ -350,6 +353,5 @@ TRBDF2 & 0.010050251256 & 1.378343390764 & 0.036463543893 & 0.000797557279\\
 \caption{Sample values using 500 points and 5 time-steps, $\alpha=35\%, \beta=0.25, \rho=-10\%, \nu=100\%, T=1, f=1, F_{max}=5, \delta=0.2$}
 \end{center}
 \end{table} 
-
 
 \end{document}
